urdf version able to run through create_actor

--- a/isaacgymenvs/runs/AMP_walk/config.yaml
+++ b/isaacgymenvs/runs/AMP_walk/config.yaml
@@ -23,7 +23,7 @@ task:
     enableEarlyTermination: true
     motion_file: amp_humanoid_walk.npy
     asset:
-      assetFileName: mjcf/a1.xml
+      assetFileName: urdf/a1_original.urdf
     plane:
       staticFriction: 1.0
       dynamicFriction: 1.0
