--- a/isaacgymenvs/cfg/task/A1Base.yaml
+++ b/isaacgymenvs/cfg/task/A1Base.yaml
@@ -34,7 +34,7 @@ env:
   #motion_file: "amp_humanoid_backflip.npy"
 
   asset:
-    assetFileName: "mjcf/a1.xml"
+    assetFileName: "urdf/a1_original.urdf"
 
   plane:
     staticFriction: 1.0
