a1 env set w some hacking

--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -5,7 +5,7 @@ physics_engine: ${..physics_engine}
 
 # if given, will override the device setting in gym.
 env: 
-  numEnvs: ${resolve_default:5480,${...num_envs}}
+  numEnvs: ${resolve_default:4096,${...num_envs}}
   envSpacing: 3
   episodeLength: 300
   cameraFollow: True # if the camera follows humanoid or not
@@ -34,7 +34,7 @@ env:
   #motion_file: "amp_humanoid_backflip.npy"
 
   asset:
-    assetFileName: "urdf/a1.urdf"
+    assetFileName: "urdf/a1_original.urdf"
 
   plane:
     staticFriction: 1.0
@@ -104,7 +104,7 @@ task:
         schedule: "linear"  # "linear" will linearly interpolate between no rand and max rand
         schedule_steps: 3000
     actor_params:
-      humanoid:
+      a1:
         color: True
         rigid_body_properties:
           mass: 
@@ -153,4 +153,6 @@ task:
             distribution: "gaussian"
             schedule: "linear"  # "linear" will scale the current random sample by `min(current num steps, schedule_steps) / schedule_steps`
             schedule_steps: 3000
+          soft_dof_pos_limit: 1
+          soft_dof_torque_limit: 1
 
