--- a/isaacgymenvs/cfg/task/A1Base.yaml
+++ b/isaacgymenvs/cfg/task/A1Base.yaml
@@ -1,11 +1,11 @@
 # used to create the object
-name: A1AMP
+name: A1Base
 
 physics_engine: ${..physics_engine}
 
 # if given, will override the device setting in gym.
 env: 
-  numEnvs: ${resolve_default:5480,${...num_envs}}
+  numEnvs: ${resolve_default:4096,${...num_envs}}
   envSpacing: 3
   episodeLength: 300
   cameraFollow: True # if the camera follows humanoid or not
@@ -103,7 +103,7 @@ task:
         schedule: "linear"  # "linear" will linearly interpolate between no rand and max rand
         schedule_steps: 3000
     actor_params:
-      humanoid:
+      a1:
         color: True
         rigid_body_properties:
           mass: 
@@ -152,4 +152,6 @@ task:
             distribution: "gaussian"
             schedule: "linear"  # "linear" will scale the current random sample by `min(current num steps, schedule_steps) / schedule_steps`
             schedule_steps: 3000
+          soft_dof_pos_limit: 1
+          soft_dof_torque_limit: 1
 
