--- a/isaacgymenvs/cfg/task/A1Base.yaml
+++ b/isaacgymenvs/cfg/task/A1Base.yaml
@@ -41,6 +41,10 @@ env:
     dynamicFriction: 1.0
     restitution: 0.0
 
+control:
+  control_type: 'P'
+  action_scale: 0.25
+
 asset:
   foot_name: "None" # name of the feet bodies, used to index body state and contact force tensors
   penalize_contacts_on: []
