--- a/isaacgymenvs/cfg/task/TestMotion.yaml
+++ b/isaacgymenvs/cfg/task/TestMotion.yaml
@@ -4,7 +4,8 @@ name: TestMotion
 physics_engine: ${..physics_engine}
 
 # if given, will override the device setting in gym.
-env: 
+env:
+  addMarkers: True
   numEnvs: ${resolve_default:4096,${...num_envs}}
   envSpacing: 3
   episodeLength: 300
