--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -13,7 +13,7 @@ env:
   
   pdControl: True
   powerScale: 1.0
-  controlFrequencyInv: 30 # 1000 Hz
+  controlFrequencyInv: 30 # 33 Hz
   stateInit: "Random"
   hybridInitProb: 0.5
   numAMPObsSteps: 2
@@ -69,7 +69,7 @@ asset:
 
 
 sim:
-  dt: 0.001 # 1/60 s
+  dt: 0.001 # pd controller 1000 hz
   substeps: 2
   up_axis: "z"
   use_gpu_pipeline: ${eq:${...pipeline},"gpu"}
