--- a/isaacgymenvs/cfg/task/TestHumanoidMotion.yaml
+++ b/isaacgymenvs/cfg/task/TestHumanoidMotion.yaml
@@ -1,31 +1,31 @@
 # used to create the object
-name: A1AMP
+name: TestHumanoidMotion
 
 physics_engine: ${..physics_engine}
 
 # if given, will override the device setting in gym.
 env: 
   numEnvs: ${resolve_default:4096,${...num_envs}}
-  envSpacing: 3
+  envSpacing: 5
   episodeLength: 300
   cameraFollow: True # if the camera follows humanoid or not
   enableDebugVis: False
   
   pdControl: True
   powerScale: 1.0
-  controlFrequencyInv: 30 # 33 Hz
-  stateInit: "Random"  # Random
+  controlFrequencyInv: 2 # 30 Hz
+  stateInit: "Random"
   hybridInitProb: 0.5
-  numAMPObsSteps: 5
+  numAMPObsSteps: 2
 
   localRootObs: False
-  contactBodies: ["FR_foot", "FL_foot", "RR_foot", "RL_foot"]
-  terminationHeight: 0.15
+  contactBodies: ["right_foot", "left_foot"]
+  terminationHeight: 0.5
   enableEarlyTermination: True
 
   # animation files to learn from
   # these motions should use hyperparameters from HumanoidAMPPPO.yaml
-  motion_file: "a1_ig_ofstv1_pace.json"
+  motion_file: "amp_humanoid_walk.npy"
   #motion_file: "amp_humanoid_run.npy"
   #motion_file: "amp_humanoid_dance.npy"
 
@@ -34,42 +34,15 @@ env:
   #motion_file: "amp_humanoid_backflip.npy"
 
   asset:
-    assetFileName: "urdf/a1_ig.urdf"
+    assetFileName: "mjcf/amp_humanoid.xml"
 
   plane:
     staticFriction: 1.0
     dynamicFriction: 1.0
     restitution: 0.0
 
-control:
-  control_type: 'P'
-  action_scale: 0.25
-  stiffness: {'joint': 80.}  # [N*m/rad]
-  damping: {'joint': 1.0}
-
-asset:
-  foot_name: "None" # name of the feet bodies, used to index body state and contact force tensors
-  penalize_contacts_on: []
-  terminate_after_contacts_on: []
-  disable_gravity: False
-  collapse_fixed_joints: True # merge bodies connected by fixed joints. Specific fixed joints can be kept by adding " <... dont_collapse="true">
-  fix_base_link: False # fixe the base of the robot
-  default_dof_drive_mode: 3 # see GymDofDriveModeFlags (0 is none, 1 is pos tgt, 2 is vel tgt, 3 effort)
-  self_collisions: 0 # 1 to disable, 0 to enable...bitwise filter
-  replace_cylinder_with_capsule: True # replace collision cylinders with capsules, leads to faster/more stable simulation
-  flip_visual_attachments: True # Some .obj meshes must be flipped from y-up to z-up
-  
-  density: 0.001
-  angular_damping: 0.
-  linear_damping: 0.
-  max_angular_velocity: 1000.
-  max_linear_velocity: 1000.
-  armature: 0.
-  thickness: 0.01
-
-
 sim:
-  dt: 0.001 # pd controller 1000 hz
+  dt: 0.0166 # 1/60 s
   substeps: 2
   up_axis: "z"
   use_gpu_pipeline: ${eq:${...pipeline},"gpu"}
@@ -110,7 +83,7 @@ task:
         schedule: "linear"  # "linear" will linearly interpolate between no rand and max rand
         schedule_steps: 3000
     actor_params:
-      a1:
+      humanoid:
         color: True
         rigid_body_properties:
           mass: 
@@ -159,6 +132,4 @@ task:
             distribution: "gaussian"
             schedule: "linear"  # "linear" will scale the current random sample by `min(current num steps, schedule_steps) / schedule_steps`
             schedule_steps: 3000
-          soft_dof_pos_limit: 1
-          soft_dof_torque_limit: 1
 
