new contact body

--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -19,7 +19,7 @@ env:
   numAMPObsSteps: 5
 
   localRootObs: False
-  contactBodies: ["FR_foot", "FL_foot", "RR_foot", "RL_foot"]
+  contactBodies: ["FR_foot", "FL_foot", "RR_foot", "RL_foot", "FR_calf", "FL_calf", "RR_calf", "RL_calf"]
   terminationHeight: 0.15
   enableEarlyTermination: True
 
