--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,3 @@
-/isaacgymenvs/logs
-*train_dir*
-*ige_logs*
-*.egg-info
-/.vs
-/.vscode
-/_package
-/shaders
-._tmptext.txt
+.idea/
 __pycache__/
-/isaacgymenvs/tasks/__pycache__
-/isaacgymenvs/utils/__pycache__
-/isaacgymenvs/tasks/base/__pycache__
-/tools/format/.lastrun
-*.pyc
-_doxygen
-/rlisaacgymenvsgpu/logs
-/isaacgymenvs/benchmarks/results
-/isaacgymenvs/simpletests/results
-*.pxd2
-/tests/logs
-/isaacgymenvs/balance_bot.xml
-/isaacgymenvs/quadcopter.xml
-/isaacgymenvs/ingenuity.xml
-logs*
-nn/
 runs/
-.idea
-outputs/
-*.hydra*
