--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -24,9 +24,11 @@ env:
   enableEarlyTermination: True
 
   # animation files to learn from
-  # these motions should use hyperparameters from HumanoidAMPPPO.yaml
+  motion_file: "dataset.yaml"
 #  motion_file: "a1_ig_ofstv1_pace.json"
-  motion_file: "a1_ig_ofstv1_trot.json"
+#  motion_file: "a1_ig_ofstv1_trot.json"
+
+  # these motions should use hyperparameters from HumanoidAMPPPO.yaml
   #motion_file: "amp_humanoid_run.npy"
   #motion_file: "amp_humanoid_dance.npy"
 
