--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -166,3 +166,28 @@ task:
           soft_dof_pos_limit: 1
           soft_dof_torque_limit: 1
 
+  domain_rand:
+    randomize_friction: True
+    friction_range: [1.0, 5.0]
+    randomize_joint_friction: True
+    joint_friction_std: 0.01
+    randomize_base_mass: True
+    mass_ratio_range: 0.5
+    inertia_ratio_range: 0.2
+    randomize_PD: True
+    push_robots: True
+    push_interval_s: 0.2
+
+  noise:
+    add_noise: True
+    add_delay: True
+    noise_level: 1.0 # scales other values
+    delay_bound: [1.0/2500.0, 1.0/40.0] #40
+    noise_scales:
+      base_quat: 0.01
+      dof_pos: 0.01
+      dof_vel: 0.05
+      gravity: 0.05
+      height_measurements: 0.1
+
+
