--- a/isaacgymenvs/cfg/task/TestMotion.yaml
+++ b/isaacgymenvs/cfg/task/TestMotion.yaml
@@ -26,7 +26,7 @@ env:
 
   # animation files to learn from
   # these motions should use hyperparameters from HumanoidAMPPPO.yaml
-  motion_file: "a1_ig_ofstv1_right turn0.json"
+  motion_file: "a1_ig_ofstv1_trot2.json"
   #motion_file: "amp_humanoid_run.npy"
   #motion_file: "amp_humanoid_dance.npy"
 
