modified blocker & navigation

--- a/assets/amp/motions/dataset.yaml
+++ b/assets/amp/motions/dataset.yaml
@@ -1,5 +1,5 @@
-motions: [{"file": "a1_ig_ofstv1_pace.json", "weight": 1.0},
-          {"file" : "a1_ig_ofstv1_trot2.json", "weight": 1.0},
-          {"file": "a1_ig_ofstv1_rightturn0.json", "weight": 1.0},
-          {"file": "a1_ig_ofstv1_stationary.json", "weight": 0.2}
+motions: [{"file": "a1_ig_ofstv1_pace.json", "weight": 1.},
+          {"file" : "a1_ig_ofstv1_trot2.json", "weight": 1.},
+          {"file": "a1_ig_ofstv1_rightturn0.json", "weight": 1.},
+          {"file": "a1_ig_ofstv1_stationary.json", "weight": 0.01}
 ]
