--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -168,9 +168,9 @@ task:
           soft_dof_torque_limit: 1
 
   domain_rand:
-    randomize_friction: True
-    friction_range: [1.0, 5.0]
-    randomize_joint_friction: True
+    randomize_friction: False
+    friction_range: [0.3, 3.0]
+    randomize_joint_friction: False
     joint_friction_std: 0.01
     randomize_base_mass: True
     mass_ratio_range: 0.5
