place holder + value obs v1

--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -5,6 +5,7 @@ physics_engine: ${..physics_engine}
 
 # if given, will override the device setting in gym.
 env:
+  priv_obs: false
   historySteps:
   numEnvs: ${resolve_default:4096,${...num_envs}}
   envSpacing: 3
