--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -186,10 +186,12 @@ task:
     add_delay: True
     noise_level: 1.0 # scales other values
     delay_bound: [0.0004, 0.025] #40
+    add_ball_delay: False
     noise_scales:
       base_quat: 0.01
       dof_pos: 0.01
       dof_vel: 0.05
+      ball_pos: 0.01
       gravity: 0.05
       height_measurements: 0.1
 
