--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -197,4 +197,11 @@ task:
       height_measurements: 0.1
 
   action_filter: False
+  reward:
+    actor_vel_scale: 1.5
+    ball_vel_scale: 2.0
+    energy_scale: 0.001
+    energy_weight: 0.1
+    ab_dist_threshold: 1.5
+    piecewise: True
 
