deleted right/leftturn0, add left, goal reset freq refactor

--- a/isaacgymenvs/cfg/task/TestMotion.yaml
+++ b/isaacgymenvs/cfg/task/TestMotion.yaml
@@ -25,14 +25,7 @@ env:
   enableEarlyTermination: True
 
   # animation files to learn from
-  # these motions should use hyperparameters from HumanoidAMPPPO.yaml
-  motion_file: "a1_ig_ofstv1_trot2.json"
-  #motion_file: "amp_humanoid_run.npy"
-  #motion_file: "amp_humanoid_dance.npy"
-
-  # these motions should use hyperparameters from HumanoidAMPPPOLowGP.yaml
-  #motion_file: "amp_humanoid_hop.npy"
-  #motion_file: "amp_humanoid_backflip.npy"
+  motion_file: dataset1.yaml
 
   asset:
     assetFileName: "urdf/a1_ig.urdf"
