--- a/assets/amp/motions/dataset1.yaml
+++ b/assets/amp/motions/dataset1.yaml
@@ -1,6 +1,6 @@
-motions: [{"file": "a1_canter.json", "weight": 1.},
-          {"file" : "a1_leftturn0.json", "weight": 1.},
-          {"file": "a1_rightturn0.json", "weight": 1.},
+motions: [
+          {"file": "a1_canter.json", "weight": 1.},
+          {"file" : "a1_left.json", "weight": 1.},
           {"file": "a1_run00.json", "weight": 1.},
           {"file": "a1_run01.json", "weight": 1.},
           {"file": "a1_run02.json", "weight": 1.},
@@ -9,10 +9,9 @@ motions: [{"file": "a1_canter.json", "weight": 1.},
           {"file": "a1_trot2.json", "weight": 1.},
           {"file": "a1_turn.json", "weight": 1.},
           {"file": "a1_walk00.json", "weight": 1.},
-          {"file": "a1_walk01.json", "weight": 1.},
+          {"file": "a1_walk01.json", "weight": 1.}, 
           {"file": "a1_walk02.json", "weight": 1.},
           {"file": "a1_walk04.json", "weight": 1.},
           {"file": "a1_walk05.json", "weight": 1.},
-          {"file": "a1_walk06.json", "weight": 1.},
-          {"file": "a1_walk09.json", "weight": 1.}
+          {"file": "a1_walk06.json", "weight": 1.}
 ]
