add limited space

--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -41,6 +41,9 @@ env:
     staticFriction: 1.0
     dynamicFriction: 1.0
     restitution: 0.0
+    limit_space: false
+    width: 6.0
+    length: 9.0
 
 control:
   control_type: 'P'
