--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -206,5 +206,6 @@ task:
   local_vel: False
   randomize_goal: True
   randomize_obj: false
-  obj_size_range: [0.05, 0.15]
+  obj_size_range: [0.07, 0.15]
+  ball_size: 0.1
 
