--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -199,11 +199,10 @@ task:
     ball_vel_scale: 2.0
     energy_scale: 0.001
     energy_weight: 0.01
-    ab_dist_threshold: 1.5
-    piecewise: False
+    ab_dist_threshold: 0.5
+    piecewise: True
   goal_reset_freq_inv: 4
   is_additive: True
-  local_vel: False
   randomize_goal: True
   randomize_obj: false
   obj_size_range: [0.07, 0.15]
