new simulator params

--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -84,12 +84,12 @@ sim:
     use_gpu: ${contains:"cuda",${....sim_device}} # set to False to run on CPU
     num_position_iterations: 4
     num_velocity_iterations: 0
-    contact_offset: 0.02
+    contact_offset: 0.01 # --> 0.01 # 0.02
     rest_offset: 0.0
-    bounce_threshold_velocity: 0.2
-    max_depenetration_velocity: 10.0
+    bounce_threshold_velocity: 0.5 # --> 0.5 # 0.2
+    max_depenetration_velocity: 10.0 # 10.0
     default_buffer_size_multiplier: 5.0
-    max_gpu_contact_pairs: 8388608 # 8*1024*1024
+    max_gpu_contact_pairs: 8388608 # 8*1024*1024 --> 46
     num_subscenes: ${....num_subscenes}
     contact_collection: 2 # 0: CC_NEVER (don't collect contact info), 1: CC_LAST_SUBSTEP (collect only contacts on last substep), 2: CC_ALL_SUBSTEPS (default - all contacts)
 
