--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -1,5 +1,5 @@
 # used to create the object
-name: A1AMP
+name: A1Dribbling
 
 physics_engine: ${..physics_engine}
 
@@ -11,14 +11,14 @@ env:
   historySteps: 15
   numEnvs: ${resolve_default:4096,${...num_envs}}
   envSpacing: 3
-  episodeLength: 300
+  episodeLength: 2000
   cameraFollow: True # if the camera follows humanoid or not
   enableDebugVis: False
   
   pdControl: True
   powerScale: 1.0
   controlFrequencyInv: 30 # 33 Hz
-  stateInit: "Random"  # Random
+  stateInit: "Hybrid"  # Random
   hybridInitProb: 0.5
   numAMPObsSteps: 5
 
