--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -201,11 +201,12 @@ task:
     energy_weight: 0.01
     ab_dist_threshold: 0.5
     piecewise: True
-  goal_reset_freq_inv: 4
+  goal_reset_freq_inv: 2.5
+  goal_reset_freq_inv_upper: 1.5
   is_additive: True
   randomize_goal: True
   randomize_obj: false
-  obj_size_range: [0.07, 0.15]
+  obj_size_range: [0.08, 0.12]
   obj_density_range: [80, 200]
   ball_size: 0.1
 
