--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -175,6 +175,7 @@ task:
     mass_ratio_range: 0.75
     inertia_ratio_range: 0.2
     randomize_PD: False
+    randomize_initial_dof_pos: False
     push_robots: False
     push_interval_s: 0.2
     push_ball: False
@@ -206,7 +207,8 @@ task:
   is_additive: True
   randomize_goal: True
   randomize_obj: false
-  obj_size_range: [0.08, 0.12]
+  obj_size_range: 'soccerball_urdfs'
   obj_density_range: [80, 200]
   ball_size: 0.1
+  
 
