randr task setting

--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -167,21 +167,21 @@ task:
           soft_dof_torque_limit: 1
 
   domain_rand:
-    randomize_friction: False
+    randomize_friction: True
     friction_range: [0., 0.5]
-    randomize_joint_friction: False
+    randomize_joint_friction: True
     joint_friction_std: 0.01
-    randomize_base_mass: False
+    randomize_base_mass: True
     mass_ratio_range: 0.75
     inertia_ratio_range: 0.2
-    randomize_PD: False
-    randomize_initial_dof_pos: False
+    randomize_PD: True
+    randomize_initial_dof_pos: True
     push_robots: False
     push_interval_s: 0.2
     push_ball: False
 
   noise:
-    add_noise: False
+    add_noise: True
     add_delay: False
     noise_level: 1.0 # scales other values
     delay_bound: [0.0004, 0.025] #40
