--- a/isaacgymenvs/cfg/task/A1AMP.yaml
+++ b/isaacgymenvs/cfg/task/A1AMP.yaml
@@ -172,7 +172,7 @@ task:
     randomize_joint_friction: True
     joint_friction_std: 0.01
     randomize_base_mass: True
-    mass_ratio_range: 0.75
+    mass_ratio_range: 0.5
     inertia_ratio_range: 0.2
     randomize_PD: True
     randomize_initial_dof_pos: True
@@ -189,8 +189,8 @@ task:
     noise_scales:
       base_quat: 0.01
       dof_pos: 0.01
-      dof_vel: 0.05
-      ball_pos: 0.1
+      dof_vel: 0.01
+      ball_pos: 0.03
       gravity: 0.05
       height_measurements: 0.1
 
@@ -206,7 +206,7 @@ task:
   goal_reset_freq_inv_upper: 2
   is_additive: True
   randomize_goal: True
-  randomize_obj: false
+  randomize_obj: True
   obj_size_range: 'soccerball_urdfs'
   obj_density_range: [80, 200]
   ball_size: 0.1
